# BingXtg

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.md  PROJECT.MD  README.md  cleanup.sh  config_template.py  debug_data.py  debug_updater.py  main.py  manage.py  pyproject.toml  requirements.txt  test_env_config.py  test_updater.py
ai/inference/: ai_service.py  predict.py
ai/labeling/: main_textual.css  main_textual.py
ai/training/: classification_test.py  classification_train.py  ner_test.py  ner_training.py  test_format_compatibility.py  total_ai_test.py  utils.py
ai/training/hf/: __init__.py  export_data.py  test_classifier.py  test_ner.py  total_hf_ai_test.py  train_classifier.ipynb  train_classifier.py  train_ner.ipynb  train_ner.py
aiMigration/webui/: manage.py
ai_training/: __init__.py  classification_train.py  ner_test.py  ner_training.py  test_normalization.py  total_ai_test.py
apps/ai_assistant/: __init__.py  apps.py  services.py  urls.py  views.py
apps/labeling/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
apps/telegram_client/: __init__.py  apps.py  message_extractor.py  models.py  urls.py
apps/trading_bot/: admin.py  apps.py  bingx_api.py  command_handler.py  consumers.py  data_handler.py  models.py  order_handler.py  routing.py  text_parser.py  tg_parser.py  urls.py  views.py
bingxtg_project/: asgi.py  settings.py  urls.py  wsgi.py
bot/: command_handler.py  consumers.py  tg_parser.py  urls.py
core/config/: env.py  settings.py  validation.py
core/database/: manager.py
data/: state.json
docs/: RAW_docs.md  README.md  ai.md  architecture.md  data.md  operations.md  setup.md
scripts/: fix_db.py  postprocess_db.py
src/: __init__.py  bingx.py  bingx_api.py  command_handler.py  data_handler.py  order_handler.py  tableviewer.py  text.py  text_parser.py  tg_parser.py  tgparser.py
src/core/: ai_assistant.py  bingx.py  database_manager.py  tableviewer.py  text.py  tgparser.py
src/data/: channels.json  curdata.json  table.json  winrate.json
src/telegram/: message_extractor.py
templates/: ai_dashboard.html  base.html  dashboard.html  extended_label.html  extract.html  index.html  label.html  trading_dashboard.html
templates/labeling/: index.html
trading_bot_project/: asgi.py  settings.py  urls.py  wsgi.py
utils/: __init__.py  ai_assistant.py  ai_inference.py  check_configs.py  config.py  database_manager.py
webapp/: __init__.py  apps.py  services.py  views.py
webui/: asgi.py  settings.py
(+20 files in other folders)
