[project]
name = "bingxtg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bingx>=0.0.74",
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "cryptography>=45.0.5",
    "daphne>=4.2.1",
    "dataframe-image==0.2.2",
    "datasets>=2.19.1",
    "django>=5.2.5",
    "loguru==0.7.2",
    "numpy==1.26.2",
    "pandas==2.1.3",
    "py-bingx>=0.4",
    "pyqt6>=6.9.1",
    "pyrogram==2.0.106",
    "python-dotenv>=1.1.1",
    "regex>=2025.7.34",
    "requests==2.31.0",
    "scikit-learn>=1.7.1",
    "telethon>=1.40.0",
    "tgcrypto>=1.2.5",
    "torch>=2.8.0",
    "transformers>=4.55.4",
    "whitenoise>=6.9.0",
]
