[project]
name = "bingxtg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "anthropic>=0.68.0",
    "bingx>=0.0.74",
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "cohere>=5.18.0",
    "colabcode>=0.1.1",
    "commits-compose",
    "cryptography>=45.0.5",
    "daphne>=4.2.1",
    "dataframe-image==0.2.2",
    "datasets>=2.19.1",
    "django>=5.2.5",
    "groq>=0.31.1",
    "keras>=3.11.3",
    "keras-nlp>=0.22.2",
    "loguru==0.7.2",
    "numpy==1.26.2",
    "openai>=1.109.1",
    "pandas==2.1.3",
    "protobuf>=4.21.6,<6.0.0",
    "py-bingx>=0.4",
    "pyqt6>=6.9.1",
    "python-dotenv>=1.1.1",
    "regex>=2025.7.34",
    "requests==2.31.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "seqeval>=1.2.2",
    "spacy>=3.8.7",
    "telethon>=1.40.0",
    "tensorflow[cuda]>=2.18.1",
    "textual>=6.1.0",
    "tf-keras>=2.18.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.55.4",
    "whitenoise>=6.9.0",
]

[tool.uv.sources]
commits-compose = { path = "../python/commits-compose", editable = true }
